--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-chat-scroll": "^1.2.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
